# dotctl

./: .gitignore  Cargo.toml  README.md
configs/: config.toml  settings.toml  windows.toml
src/: cli.rs  config.rs  main.rs  runner.rs  settings.rs  settings_config.rs  utils.rs
src/runner/: config.rs  frontend.rs  mod.rs  resolver.rs  validate.rs
src/settings/: build.rs  config.rs  exec.rs  frontend.rs  init.rs  mod.rs  resolver.rs  utils.rs  validate.rs
