[package]
name = "dotctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
indexmap = { version = "2.12.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
which = "8.0.0"
