[package]
name = "dotctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "string"] }
dialoguer = "0.12.0"
duct = "1.1.1"
indexmap = { version = "2.12.1", features = ["serde"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
toml = { version = "0.9.8", features = ["preserve_order"] }
which = "8.0.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic ="abort"
